<resources>
    <string name="app_name">oweme</string>
    <string name="title_expense">Expenses</string>
    <string name="title_profile">Profile</string>
    <string name="title_log">Log</string>
    <string name="expenses">EXPENSES</string>
    <string name="expense_subtitle">You have 3 expense groups so far</string>
    <string name="add_expense">add expense</string>

    <string name="hint_expense">type a new expense</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Expense not saved because it is empty.</string>
    <string name="cancel">cancel</string>
    <string name="title_expenditure">expenditure</string>
    <string name="title_add_expense">add expense</string>
    <string name="title_activity_expenditure">ExpenditureActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_expenditure_activity">expenditure activity</string>
    <string name="title_setting_activity">Setting activity</string>
    <string name="large_text">large text</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="not_yet_implemented">Not yet implemented</string>
</resources>